--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>{{ .Site.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  {{ hugo.Generator }}
   <link rel="stylesheet" href="{{ $bulma.Permalink }}" />
   <script defer src="{{ "javascripts/framework.bundle.js" | absURL }}"></script>
 </head>
