Add header image

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,7 +1,13 @@
 html, body {
-    background: #f0f2f4;
+    background: #f9f9f9;
 }
 
 #content {
     padding: 64px;
+}
+
+.hero-body {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
