Rm summary from post list (#13)
* Remove summary from post list

* Set body background color

* Fix color

* Fix background

* Add header image

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,3 +1,13 @@
+html, body {
+    background: #f9f9f9;
+}
+
 #content {
     padding: 64px;
+}
+
+.hero-body {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
