--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,5 +8,5 @@
   {{ hugo.Generator }}
   <link rel="stylesheet" href="{{ $bulma.Permalink }}" />
   <link rel="stylesheet" href="{{ $style.Permalink }}" />
-  <script defer src="{{ "javascripts/framework.bundle.js" | absURL }}"></script>
+  <script defer src="{{ "javascripts/librarian.bundle.js" | absURL }}"></script>
 </head>
