Add subtitle from Params

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
         {{ .Site.Title }}
       </p>
       <p class="subtitle">
-        Subtitle
+        {{ .Site.Params.subtitle }}
       </p>
     </div>
   </div>
