--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -10,6 +10,9 @@ html, body {
     ul ul ul ul ul li,
     ul ul ul ul ul ul li
     { padding-left: 1em; }
+
+    a { color: gray; }
+    a:hover { color: black; }
 }
 
 #content {
