--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 
 <div class="columns">
   <div class="column is-9">
-    <div class="tile is-child box">
+    <div class="tile is-child">
       <div class="content">
         {{ range $paginator.Pages }}
         <article class="media">
