--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div id="content">
+        <div id="main-block" class="container">
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
