--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="columns">
   <div class="column is-9">
-    <main class="tile is-child box">
+    <main class="tile is-child">
       <article class="content">
         <h1 class="title is-3">{{ .Page.Title }}</h1>
         <span>{{ .Date.Format "January 2, 2006" }} &middot;&nbsp;{{ .ReadingTime }} min read</span>
@@ -9,7 +9,6 @@
         {{ .Content }}
       </article>
     </main>
-    <hr/>
     {{ if eq .Type "post" }}<div id="disqus_thread"></div>{{ end }}
   </div>
   <aside class="column is-3">
