Add analytics script to head

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,4 +9,5 @@
   <link rel="stylesheet" href="{{ $bulma.Permalink }}" />
   <link rel="stylesheet" href="{{ $style.Permalink }}" />
   <script defer src="{{ "javascripts/librarian.bundle.js" | absURL }}"></script>
+  {{ template "_internal/google_analytics_async.html" . }}
 </head>
