Add aside tags widget

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,6 +22,9 @@
       </div>
     </div>
   </div>
+  <div class="column is-3">
+    {{ partial "aside_tags.html" . }}
+  </div>
 </div>
 <div class="columns">
   <div class="column is-9">
