--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,6 +24,7 @@
   </div>
   <div class="column is-3">
     {{ partial "aside_tags.html" . }}
+    {{ partial "aside_recent.html" . }}
   </div>
 </div>
 <div class="columns">
