--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,10 +22,10 @@
       </div>
     </div>
   </div>
-  <div class="column is-3">
+  <aside class="column is-3">
     {{ partial "aside_tags.html" . }}
     {{ partial "aside_recent.html" . }}
-  </div>
+  </aside>
 </div>
 <div class="columns">
   <div class="column is-9">
