Add categories widget

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,8 +16,9 @@
   </div>
   <aside class="column is-3">
     {{ .TableOfContents }}
-    {{ partial "aside_tags.html" . }}
     {{ partial "aside_recent.html" . }}
+    {{ partial "aside_categories.html" . }}
+    {{ partial "aside_tags.html" . }}
   </aside>
 </div>
 {{ end }}
