--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,8 +23,9 @@
     </div>
   </div>
   <aside class="column is-3">
-    {{ partial "aside_tags.html" . }}
     {{ partial "aside_recent.html" . }}
+    {{ partial "aside_categories.html" . }}
+    {{ partial "aside_tags.html" . }}
   </aside>
 </div>
 <div class="columns">
