Add content to footer

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -20,3 +20,12 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.footer {
+    a,
+    .title,
+    .label
+    { color: white; }
+
+    a:hover { text-decoration: underline; }
+}
