--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -22,10 +22,17 @@
 }
 
 .footer {
-    a,
     .title,
     .label
     { color: white; }
 
-    a:hover { text-decoration: underline; }
+    a { color: #b0b0b0; }
+    a:hover { color: white; }
+
+    .credit { font-size: 10pt; color: #b0b0b0 }
+    .underline {
+        border-bottom: 1px dotted #a0a0a0;
+        padding-bottom: 1px;
+        &:hover { border-bottom: 1px dotted white; }
+    }
 }
