Add social links

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,8 +18,9 @@
       <div class="column is-3">
         <h2 class="title is-4">Socials</h2>
         <ul>
-          <li><i class="fa fa-twitter"></i>&nbsp;<a href="https://twitter.com/pg_nukosuke">@pg_nukosuke</a></li>
-          <li><i class="fa fa-github"></i>&nbsp;<a href="https://github.com/nukosuke">nukosuke</a></li>
+          <li><i class="fa fa-twitter"></i>&nbsp;&nbsp;<a href="https://twitter.com/pg_nukosuke">Twitter</a></li>
+          <li><i class="fa fa-github"></i>&nbsp;&nbsp;<a href="https://github.com/nukosuke">GitHub</a></li>
+          <li><i class="fa fa-medium"></i>&nbsp;&nbsp;<a href="https://medium.com/@nukosuke">Medium</a></li>
         </ul>
       </div>
       <div class="column is-3">
