--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,6 +22,11 @@
       </div>
     </div>
   </div>
+  <aside class="column is-3">
+    {{ partial "aside_recent.html" . }}
+    {{ partial "aside_categories.html" . }}
+    {{ partial "aside_tags.html" . }}
+  </aside>
 </div>
 <div class="columns">
   <div class="column is-9">
