--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,59 @@
 <footer class="footer is-dark">
-  <div class="content has-text-centered">
-    <p>Copyright &copy; {{ .Site.Params.author }}</p>
+  <div class="container">
+    <div class="columns">
+      <div class="column is-3">
+        <h2 class="title is-4">Sitemap</h2>
+        <ul>
+          <li><a>Home</a></li>
+          <li><a>Tag</a></li>
+          <li><a>Category</a></li>
+        </ul>
+      </div>
+      <div class="column is-3">
+        <h2 class="title is-4">Links</h2>
+        <ul>
+          <li><a href="https://nukosuke.com">Portfolio</a></li>
+        </ul>
+      </div>
+      <div class="column is-3">
+        <h2 class="title is-4">Socials</h2>
+        <ul>
+          <li><i class="fa fa-twitter"></i>&nbsp;&nbsp;<a href="https://twitter.com/pg_nukosuke">Twitter</a></li>
+          <li><i class="fa fa-github"></i>&nbsp;&nbsp;<a href="https://github.com/nukosuke">GitHub</a></li>
+          <li><i class="fa fa-medium"></i>&nbsp;&nbsp;<a href="https://medium.com/@nukosuke">Medium</a></li>
+        </ul>
+      </div>
+      <div class="column is-3">
+        <h2 class="title is-4">Contact</h2>
+        <form>
+          <div class="field">
+            <label class="label">Email</label>
+            <div control="control">
+              <input class="input" type="email" />
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Message</label>
+            <div class="control">
+              <textarea class="textarea"></textarea>
+            </div>
+          </div>
+          <div class="field">
+            <div class="control level-right">
+              <button class="button is-primary" type="submit">Submit</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column is-full">
+        <div class=" content has-text-centered">
+          <p>&copy; {{ now.Format "2006" }} {{ .Site.Params.author }}.</p>
+          <p class="credit">Powered by <a href="https://gohugo.io/" class="underline">Hugo</a>. <a class="underline" href="https://github.com/nukosuke/hugo-librarian">Librarian theme</a> by <a class="underline" href="https://twitter.com/pg_nukosuke">@pg_nukosuke</a></p>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
